[package]
name = "lib"
version = "0.1.0"
edition = "2018"

[dependencies]
directories = "3.0"
sqlx = { version = "0.5", default-features = false, features = [ "sqlite", "chrono", "macros", "migrate", "runtime-tokio-rustls"] }
tokio = { version = "1.6", features = [ "rt", "macros" ] }
async-trait = "0.1"
